# rsbio-seq

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml  rsbio_seq.pyi
.github/workflows/: pypi.yml  rust_test.yml
src/: lib.rs  reader.rs  seq.rs  writer.rs
tests/: perf.py  phred_test.py  read_test.py  test.py  write_test.py
