[package]
name = "rsbio-seq"
version = "0.1.2"
edition = "2021"
authors = [
    "Anuradha Wickramarachchi <anuradhawick@gmail.com>",
    "Vijini Mallawaarachchi <viji.mallawaarachchi@gmail.com>",
]
description = "RSBio-Seq is a fast and light-weight sequence reading library (built on top of rust bio crate)."
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rsbio_seq"
crate-type = ["cdylib"]

[dependencies]
bio = "2.0.1"
flate2 = "1.0.33"
pyo3 = { version = "0.22.0", features = ["abi3-py39"] }

[features]
extension-module = ["pyo3/extension-module"]
